Cleared some of the unnecessary defaults and hopefully fixed the whitespace margin on the right on mobile.

--- a/gulp/assets/stylesheets/_global.scss
+++ b/gulp/assets/stylesheets/_global.scss
@@ -5,11 +5,7 @@ $footer-bg-color: lighten($brand-primary, 20%);
 
 
 html, body { 
-  height: 100%; margin: 0; padding: 0; 
-}
-
-.container-fluid {
-  padding: 0;
+  height: 100%;
 }
 
 .btn-xl {
