--- a/gulp/assets/stylesheets/_home.scss
+++ b/gulp/assets/stylesheets/_home.scss
@@ -31,6 +31,10 @@
 .check-value {
   text-align: center;
   padding: 4em 1em;
+
+  a {
+    white-space: normal;
+  }
 }
 
 .testimonials {
